Layout bug fixes

--- a/src/main/webapp/css/ie.css
+++ b/src/main/webapp/css/ie.css
@@ -95,13 +95,11 @@ button, input.button {
 }
 
 #row-0 {
-    position: relative !important;
-    margin-bottom: -3em !important;
+    position: absolute !important;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#107FC9', endColorstr='#025D8C');
 }
 
 #row-2 {
-    position: relative !important;
-    margin-top: -2em !important;
+    position: absolute !important;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#107FC9', endColorstr='#025D8C');
 }
